Fix for sticky on Safari

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -156,6 +156,7 @@ a {
 }
 
 .sticky-element {
+  position: -webkit-sticky;
   position: sticky;
   top: -1;
 }
